src/objects/REVVY__MnCatalogNode__c.object
<CustomObject>
    <fields>
        <fullName>CalPt_Replicates__c</fullName>
        <label>Cal Point Replicates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalPts_Levels__c</fullName>
        <label>CalPoints/Levels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalsPerYr__c</fullName>
        <label>Minimum Cals/Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Category_Group__c</fullName>
        <label>Discount Category Group</label>
        <picklist>
            <picklistValues>
                <fullName>Microtip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microslide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microwell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC Consumables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA Consumables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cards - IDMTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Blood Cells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ortho AntiSera Tube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-Human Globulin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cassettes - BioVue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IH Consumables</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EC_Reportable_Result_Billing_Code__c</fullName>
        <description>Europe Reportable Result Billing Code</description>
        <label>EC Reportable Result Billing Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Test_Name__c</fullName>
        <description>The Reagents are grouped on the basis of Test name</description>
        <label>Test Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <picklist>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trad IH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC;IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT;Trad IH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_SKU_Id_CA__c</fullName>
        <description>Local SKU Id for Canada</description>
        <label>Local SKU Id CA</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MajorLOB__c</fullName>
        <label>MajorLOB</label>
        <picklist>
            <picklistValues>
                <fullName>CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MinLoadUnit__c</fullName>
        <label>Minimum Load Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OAS__c</fullName>
        <label>On Analyzer Stability Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Conversion_Factor__c</fullName>
        <label>Pricing Conversion Factor</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Reagent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade-In</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QtyPerSalesUnit__c</fullName>
        <label>Quantity/SalesUnit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__AllowPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether price can be set</description>
        <inlineHelpText>Defines whether price can be set. Checking this box allows this node to be selectable in price list line.</inlineHelpText>
        <label>Allow Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__Billing_Frequency_Multiplier__c</fullName>
        <description>Gives multiplier value needed to derive actual value of product for any given year. For example, if product type is monthly, this field will return number 12. Similarly if product type is Weekly, this field will return number 52.</description>
        <formula>CASE ( TEXT( REVVY__Billing_Frequency__c ) , &apos;One Time&apos; , 1 , &apos;Yearly&apos; , 1 , &apos;Monthly&apos; , 12 , &apos;Weekly&apos; , 52 , 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Frequency Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__Billing_Frequency__c</fullName>
        <description>Whether the product is charged on a recurring basis. A product can be charged one-time, weekly, monthly, or yearly.</description>
        <inlineHelpText>Whether the product is charged on a recurring basis. A product can be charged one-time, weekly, monthly, or yearly.</inlineHelpText>
        <label>Billing Freq.</label>
        <picklist>
            <controllingField>REVVY__Type__c</controllingField>
            <picklistValues>
                <fullName>One Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__Configurable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines product as a configurable product.</description>
        <inlineHelpText>Defines product as a configurable product. Checking this box means that the product is configurable.</inlineHelpText>
        <label>Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__Description_Catalog_Locale_Ext__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unique Salesforce ID for the Description:Catalog Node Locale Extension.</description>
        <inlineHelpText>Unique Salesforce ID for the Description:Catalog Node Locale Extension.</inlineHelpText>
        <label>Description Catalog Locale Ext</label>
        <referenceTo>REVVY__MnCatalogNodeLocaleExt__c</referenceTo>
        <relationshipLabel>Catalog Nodes</relationshipLabel>
        <relationshipName>CatalogNodesDesc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__Description__c</fullName>
        <description>Description of the product. The description is displayed in the end user catalog.</description>
        <inlineHelpText>Description of the product. The description is displayed in the end user catalog.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>REVVY__Discountable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to allow/block Manual discount when product is added to the Quote.</description>
        <inlineHelpText>Flag to allow/block Manual discount when product is added to the Quote.</inlineHelpText>
        <label>Discountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__Effective_End_Date__c</fullName>
        <defaultValue>date ( year(today()) +  value($Label.REVVY__MnDefaultEffectiveEndDateInYears),
                     month(today()),
                     day(today()))</defaultValue>
        <description>The last date that the product is available in the catalog.</description>
        <inlineHelpText>The last date that the product is available in the catalog.</inlineHelpText>
        <label>Effective End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REVVY__Effective_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date when product becomes available in end user catalog.</description>
        <inlineHelpText>Date when product becomes available in end user catalog.</inlineHelpText>
        <label>Effective Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REVVY__Id__c</fullName>
        <description>Unique ID for each record that can be used as an external ID for importing and exporting data.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID for this record.</inlineHelpText>
        <label>ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>REVVY__InventoryLevel__c</fullName>
        <description>How much of the product is left in stock. Helpful for creating quotes.</description>
        <inlineHelpText>How much of the product is left in stock.</inlineHelpText>
        <label>Inventory Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__IsInstallBase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether a reg product, bundle, or config product is Install Base Relevant.</description>
        <inlineHelpText>Defines whether a regular product, bundle, or config product is specified as Install Base Relevant.</inlineHelpText>
        <label>Install Base Relevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__IsKit__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines product as physical bundle (i.e. Kit).</description>
        <inlineHelpText>Defines product as a physical bundle (kit). Checking this box means that the product is kit and all its components are for information only.</inlineHelpText>
        <label>Is Kit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__LineType__c</fullName>
        <label>Tracked On</label>
        <picklist>
            <picklistValues>
                <fullName>Not tracked on contract</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__LocaleDesc_RF__c</fullName>
        <description>Description of the product in Locale.</description>
        <inlineHelpText>Description of the product in Locale.</inlineHelpText>
        <label>Locale Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>REVVY__LocaleName_F__c</fullName>
        <formula>BLANKVALUE(CASE($User.REVVY__ul__c,&apos;L1&apos;,REVVY__Name_L1__c,&apos;L2&apos;,REVVY__Name_L2__c,&apos;L3&apos;,REVVY__Name_L3__c,&apos;L4&apos;,REVVY__Name_L4__c,&apos;L5&apos;,REVVY__Name_L5__c,&apos;L6&apos;,REVVY__Name_L6__c,&apos;L7&apos;,REVVY__Name_L7__c,&apos;L8&apos;,REVVY__Name_L8__c,&apos;L9&apos;,REVVY__Name_L9__c,&apos;L10&apos;,REVVY__Name_L10__c,&apos;L11&apos;,REVVY__Name_L11__c,&apos;L12&apos;,REVVY__Name_L12__c,&apos;L13&apos;,REVVY__Name_L13__c,&apos;L14&apos;,REVVY__Name_L14__c,&apos;L15&apos;,REVVY__Name_L15__c,&apos;L16&apos;,REVVY__Name_L16__c,&apos;L17&apos;,REVVY__Name_L17__c,&apos;L18&apos;,REVVY__Name_L18__c,&apos;L19&apos;,REVVY__Name_L19__c,&apos;L20&apos;,REVVY__Name_L20__c,Name),Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__LocaleTC_RF__c</fullName>
        <description>Terms and Conditions for a product</description>
        <inlineHelpText>Terms and Conditions for a product(Locale)</inlineHelpText>
        <label>Locale Terms And Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>REVVY__Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Model used to configure product.</description>
        <inlineHelpText>Model used to configure product.</inlineHelpText>
        <label>Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>REVVY__MnConfigEngineModel__c.REVVY__User_id__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>REVVY__MnConfigEngineModel__c</referenceTo>
        <relationshipLabel>Config Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__Name_L10__c</fullName>
        <label>Name(Language 10)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Name_L11__c</fullName>
        <label>Name(Language 11)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Name_L12__c</fullName>
        <label>Name(Language 12)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the parent category of a subcategory.</description>
        <inlineHelpText>Defines the parent category of a subcategory.</inlineHelpText>
        <label>Parent</label>
        <referenceTo>REVVY__MnCatalogNode__c</referenceTo>
        <relationshipLabel>Catalog Nodes</relationshipLabel>
        <relationshipName>Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__ProductAvailability__c</fullName>
        <description>Admin can show the availability, delivery time, or backorder status for the product. Helpful for creating quotes.</description>
        <inlineHelpText>Admin can show the availability, delivery time, or backorder status for the product.</inlineHelpText>
        <label>Product Availability</label>
        <picklist>
            <controllingField>REVVY__Type__c</controllingField>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Week Lead Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Week Lead Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Month Lead Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Month Lead Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Backorder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__QuickSearchHelper__c</fullName>
        <description>Contains a formula field that supports catalog search.</description>
        <formula>Name + REVVY__LocaleName_F__c + &apos;#&apos; +  REVVY__Id__c</formula>
        <inlineHelpText>Contains a formula field that supports catalog search.</inlineHelpText>
        <label>QuickSearchHelper</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__SapId__c</fullName>
        <description>Unique ID for each record that comes from SAP (only for SAP products).</description>
        <inlineHelpText>SAP ID for this record.</inlineHelpText>
        <label>SAP ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>REVVY__SapPricingFieldMap__c</fullName>
        <description>Field mapping from ConfigIT to Revvy. Format - configitdescription1:revvyfield1;configitdescription2:revvyfield2;</description>
        <inlineHelpText>Field mapping from ConfigIT to Revvy.</inlineHelpText>
        <label>SAP Field Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__StandaloneSellable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field determines whether a product can be sold alone. If this field is set to false, this product will not appear in product quick search results.</description>
        <inlineHelpText>This field determines whether a product can be sold alone. If this field is set to false, this product will not appear in product quick search results.</inlineHelpText>
        <label>Sold By Itself</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__Status__c</fullName>
        <description>State of the product. The status can be either draft or active. If status is draft, then the product is not available in the catalog. If status is active, then product is available in the catalog.</description>
        <inlineHelpText>State of the product. The status can be either draft or active. If status is draft, then the product is not available in the catalog. If status is active, then product is available in the catalog.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__SubType__c</fullName>
        <label>SubType</label>
        <picklist>
            <controllingField>REVVY__Type__c</controllingField>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__TC_Catalog_Locale_Ext__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unique Salesforce ID for the Terms and Condition:Catalog Node Locale Extension.</description>
        <inlineHelpText>Unique Salesforce ID for the Terms and Condition:Catalog Node Locale Extension.</inlineHelpText>
        <label>TC Catalog Locale Ext</label>
        <referenceTo>REVVY__MnCatalogNodeLocaleExt__c</referenceTo>
        <relationshipLabel>Catalog Nodes (TC Catalog Locale Ext)</relationshipLabel>
        <relationshipName>CatalogNodesTC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__TermsAndConditions__c</fullName>
        <description>Terms and Conditions for a product</description>
        <inlineHelpText>Terms and Conditions for a product</inlineHelpText>
        <label>Terms And Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>REVVY__Type__c</fullName>
        <description>Defines whether the node is a catalog, category, product, or  bundle.</description>
        <inlineHelpText>Defines whether the node is a catalog, category, product, or  bundle.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__VirtualSKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Virtual SKU</label>
        <referenceTo>REVVY__MnVirtualSKu__c</referenceTo>
        <relationshipLabel>Catalog Nodes</relationshipLabel>
        <relationshipName>Catalog_Nodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether a category is shown in the end user catalog.</description>
        <inlineHelpText>Determines whether a category is shown in the end user catalog.</inlineHelpText>
        <label>Visible to Sales Reps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__image2__c</fullName>
        <description>Second image of product.</description>
        <inlineHelpText>Second image of product.</inlineHelpText>
        <label>Image 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__image3__c</fullName>
        <description>Third image of product.</description>
        <inlineHelpText>Third image of product.</inlineHelpText>
        <label>Image 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__image4__c</fullName>
        <description>Fourth image of product.</description>
        <inlineHelpText>Fourth image of product.</inlineHelpText>
        <label>Image 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__mainImage1__c</fullName>
        <description>First image of product. This is the primary picture that is displayed.</description>
        <inlineHelpText>First image of product. This is the primary picture that is displayed.</inlineHelpText>
        <label>Main Image 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__sortOrder__c</fullName>
        <description>Index to control the sorting of the product display through the Catalog interface. By default the sort is in ascending order.</description>
        <inlineHelpText>Index to control the sorting of the product display through the Catalog interface. By default the sort is in ascending order. (i.e. 1, 5, 6, 20 as represented in the list.)</inlineHelpText>
        <label>Sort Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StandardCost__c</fullName>
        <label>StandardCost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>US_Reportable_Result_Billing_Code__c</fullName>
        <label>US Reportable Result Billing Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>